@@ -1,8 +1,11 @@
-CHANGES.txt - 01/10/2006
+CHANGES.txt - 01/11/2006
 ------------------------
 
 CHANGES IN CUPS V1.2.0b1
 
+	- cupsaddsmb now accepts a password on the command-line
+	  and supports passwords with special characters (STR
+	  #822, STR #1236)
 	- ppdLoad*() no longer tries to "fix" bad characters in
 	  UI text (STR #1101)
 	- Printer names can now (reliably) contain Unicode
